--- a/contact.html
+++ b/contact.html
@@ -80,11 +80,11 @@
           <div class="row align-items-center">
             <div class="col-xl-3 col-lg-3">
               <div class="logo">
-                <a href="index-2.html"><img src="img/logo/logo.png" alt="logo" /></a>
+                <a href="index.html"><img src="img/logo/logo.jpg" alt="logo" /></a>
               </div>
             </div>
             <div class="col-xl-6 col-lg-6">
-              <div class="main-menu text-right text-xl-right">
+              <div class="main-menu text-center">
                 <nav id="mobile-menu">
                   <ul>
                     <li><a href="index.html">Home</a></li>
@@ -101,10 +101,7 @@
               <div class="login">
                 <ul>
                   <li class="nav-icons">
-                    <img src="img/icon/aicte.png" alt="icon" />
-                  </li>
-                  <li class="nav-icons">
-                    <img src="img/icon/wbscte.png" alt="icon" />
+                    <img src="img/logo/nav-icon.jpg" alt="icon" />
                   </li>
                 </ul>
               </div>
