--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
-    <!-- Place favicon.ico in the root directory -->
-
-    <!-- CSS here -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/animate.min.css" />
     <link rel="stylesheet" href="css/magnific-popup.css" />
@@ -21,10 +18,10 @@
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="css/gallery.css">
 </head>
 
 <body>
-    <!-- header -->
     <header class="header-area header-two">
         <div class="header-top second-header d-none d-md-block">
             <div class="container-fluid">
@@ -38,7 +35,6 @@
                                 <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
                                 <a href="#" title="Twitter"><i class="fab fa-youtube"></i></a>
                             </span>
-                            <!--  /social media icon redux -->
                         </div>
                     </div>
                     <div class="col-lg-8 col-md-8 d-none d-lg-block text-right">
@@ -76,11 +72,11 @@
         </div>
         <div id="header-sticky" class="menu-area">
             <div class="container-fluid">
-                <div class="second-menu">
+                <div class="second-menu mx-5">
                     <div class="row align-items-center">
                         <div class="col-xl-3 col-lg-3">
                             <div class="logo">
-                                <a href="index-2.html"><img src="img/logo/f_logo.png" alt="logo" /></a>
+                                <a href="index.html"><img src="img/logo/logo.jpg" alt="logo" /></a>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6">
@@ -101,11 +97,9 @@
                             <div class="login">
                                 <ul>
                                     <li class="nav-icons">
-                                        <img src="img/icon/aicte.png" alt="icon" />
+                                        <img src="img/logo/nav-icon.jpg" alt="icon" />
                                     </li>
-                                    <li class="nav-icons">
-                                        <img src="img/icon/wbscte.png" alt="icon" />
-                                    </li>
+
                                 </ul>
                             </div>
                         </div>
@@ -628,50 +622,40 @@
                             </div>
                         </div>
                     </div>
-                    <div class="grid col3 wow fadeInUp animated" data-animation="fadeInUp" data-delay=".4s">
-                        <div class="grid-item financial">
-                            <a href="single-projects.html">
-                                <figure class="gallery-image">
-                                    <img src="img/gallery/protfolio-img01.jpg" alt="img" class="img" />
-                                </figure>
+                    <section class="img-gallery-magnific">
+
+
+                        <div class="magnific-img">
+                            <a class="image-popup-vertical-fit" href="https://unsplash.it/905/?random" title="8.jpg">
+                                <img src="https://unsplash.it/905/?random" alt="8.jpg" />
                             </a>
                         </div>
-                        <div class="grid-item financial banking">
-                            <a href="single-projects.html">
-                                <figure class="gallery-image">
-                                    <img src="img/gallery/protfolio-img02.jpg" alt="img" class="img" />
-                                </figure>
+                        <div class="magnific-img">
+                            <a class="image-popup-vertical-fit" href="https://unsplash.it/1230/?random" title="12.jpg">
+                                <img src="https://unsplash.it/1230/?random" alt="12.jpg" />
                             </a>
                         </div>
-                        <div class="grid-item insurance">
-                            <a href="single-projects.html">
-                                <figure class="gallery-image">
-                                    <img src="img/gallery/protfolio-img03.jpg" alt="img" class="img" />
-                                </figure>
+                        <div class="magnific-img">
+                            <a class="image-popup-vertical-fit" href="https://unsplash.it/800/?random" title="13.jpg">
+                                <img src="https://unsplash.it/800/?random" alt="13.jpg" />
                             </a>
                         </div>
-                        <div class="grid-item family">
-                            <a href="single-projects.html">
-                                <figure class="gallery-image">
-                                    <img src="img/gallery/protfolio-img04.jpg" alt="img" class="img" />
-                                </figure>
+                        <div class="magnific-img">
+                            <a class="image-popup-vertical-fit" href="https://unsplash.it/930/?random" title="14.jpg">
+                                <img src="https://unsplash.it/930/?random" alt="14.jpg" />
                             </a>
                         </div>
-                        <div class="grid-item business">
-                            <a href="single-projects.html">
-                                <figure class="gallery-image">
-                                    <img src="img/gallery/protfolio-img05.jpg" alt="img" class="img" />
-                                </figure>
+                        <div class="magnific-img">
+                            <a class="image-popup-vertical-fit" href="https://unsplash.it/999/?random" title="15.jpg">
+                                <img src="https://unsplash.it/999/?random" alt="15.jpg" />
                             </a>
                         </div>
-                        <div class="grid-item financial">
-                            <a href="single-projects.html">
-                                <figure class="gallery-image">
-                                    <img src="img/gallery/protfolio-img06.jpg" alt="img" class="img" />
-                                </figure>
+                        <div class="magnific-img">
+                            <a class="image-popup-vertical-fit" href="https://unsplash.it/897/?random" title="16.jpg">
+                                <img src="https://unsplash.it/897/?random" alt="16.jpg" />
                             </a>
                         </div>
-                    </div>
+                    </section>
                 </div>
             </div>
         </section>
@@ -785,16 +769,8 @@
             </div>
         </div>
         <div class="copyright-wrap">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-4">
-                        <div class="copy-text">
-                            <a href="index-2.html"><img src="img/logo/f_logo.png" alt="img" /></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 text-center"></div>
-                    <div class="col-lg-4 text-right text-xl-right">Copyright</div>
-                </div>
+            <div class="container text-center">
+                Copyright
             </div>
         </div>
     </footer>
@@ -820,6 +796,7 @@
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/element-in-view.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/gallery.js"></script>
 </body>
 
 </html>
