--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
           <div class="row align-items-center">
             <div class="col-xl-3 col-lg-3">
               <div class="logo">
-                <a href="index.html"><img src="img/logo/logo.jpg" alt="logo" /></a>
+                <a href="index.html"><img src="img/logo/logo.jpg" alt="logo" width="90px" /></a>
               </div>
             </div>
             <div class="col-xl-6 col-lg-6">
