color chnges and logo set

--- a/faculties.html
+++ b/faculties.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Courses</title>
+    <title>Faculties</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/gallery.css">
 </head>
 
 <body>
@@ -126,15 +127,15 @@
                     <div class="col-xl-12 col-lg-12">
                         <div class="breadcrumb-wrap text-left">
                             <div class="breadcrumb-title">
-                                <h2>Courses</h2>
+                                <h2>Notices</h2>
                             </div>
                         </div>
                     </div>
                     <div class="breadcrumb-wrap2">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="index-2.html">Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Courses</li>
+                                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Notices</li>
                             </ol>
                         </nav>
                     </div>
@@ -142,187 +143,153 @@
             </div>
         </section>
         <!-- breadcrumb-area-end -->
-        <!-- shop-area -->
-        <section class="shop-area pt-120 pb-120 p-relative " data-animation="fadeInUp animated" data-delay=".2s">
+        <section class="team-area2 fix p-relative pt-120 pb-80">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-sm-6">
-                        <h6 class="mt-20 mb-50">Showing 1–9 of 10 results</h6>
-                    </div>
-                    <div class="col-lg-6 col-sm-6 text-right">
+                    <div class="col-lg-12 p-relative">
+                        <div class="section-title center-align mb-50 text-center wow fadeInDown animated"
+                            data-animation="fadeInDown" data-delay=".4s">
+                            <h5><i class="fal fa-graduation-cap"></i> Our Teacher</h5>
+                            <h2>
+                                Our Expert Teacher
+                            </h2>
 
-                    </div>
-                </div>
-                <div class="row align-items-center">
-                    <div class="col-lg-4 col-md-6 ">
-                        <div class="courses-item mb-30 hover-zoomin">
-                            <div class="thumb fix">
-                                <a href="course-details.html"><img src="img/bg/couress-img-1.jpg"
-                                        alt="contact-bg-an-01"></a>
-                            </div>
-                            <div class="courses-content">
-                                <div class="cat"><i class="fal fa-graduation-cap"></i> Sciences</div>
-                                <h3><a href="course-details.html"> Biochemistry</a></h3>
-                                <p>Seamlessly visualize quality ellectual capital without superior collaboration and
-                                    idea tically</p>
-                                <a href="course-details.html" class="readmore">Read More <i
-                                        class="fal fa-long-arrow-right"></i></a>
-                            </div>
-                            <div class="icon">
-                                <img src="img/icon/cou-icon.png" alt="img">
-                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 ">
-                        <div class="courses-item mb-30 hover-zoomin">
-                            <div class="thumb fix">
-                                <a href="course-details.html"><img src="img/bg/couress-img-1.jpg"
-                                        alt="contact-bg-an-01"></a>
-                            </div>
-                            <div class="courses-content">
-                                <div class="cat"><i class="fal fa-graduation-cap"></i> Economics</div>
-                                <h3><a href="course-details.html"> Major in Economics</a></h3>
-                                <p>Seamlessly visualize quality ellectual capital without superior collaboration and
-                                    idea tically</p>
-                                <a href="course-details.html" class="readmore">Read More <i
-                                        class="fal fa-long-arrow-right"></i></a>
-                            </div>
-                            <div class="icon">
-                                <img src="img/icon/cou-icon.png" alt="img">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 ">
-                        <div class="courses-item mb-30 hover-zoomin">
-                            <div class="thumb fix">
-                                <a href="course-details.html"><img src="img/bg/couress-img-1.jpg"
-                                        alt="contact-bg-an-01"></a>
-                            </div>
-                            <div class="courses-content">
-                                <div class="cat"><i class="fal fa-graduation-cap"></i> Media</div>
-                                <h3><a href="course-details.html"> Business Media</a></h3>
-                                <p>Seamlessly visualize quality ellectual capital without superior collaboration and
-                                    idea tically</p>
-                                <a href="course-details.html" class="readmore">Read More <i
-                                        class="fal fa-long-arrow-right"></i></a>
-                            </div>
-                            <div class="icon">
-                                <img src="img/icon/cou-icon.png" alt="img">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 ">
-                        <div class="courses-item mb-30 hover-zoomin">
-                            <div class="thumb fix">
-                                <a href="course-details.html"><img src="img/bg/couress-img-1.jpg"
-                                        alt="contact-bg-an-01"></a>
-                            </div>
-                            <div class="courses-content">
-                                <div class="cat"><i class="fal fa-graduation-cap"></i> Public</div>
-                                <h3><a href="course-details.html"> Public Administration </a></h3>
-                                <p>Seamlessly visualize quality ellectual capital without superior collaboration and
-                                    idea tically</p>
-                                <a href="course-details.html" class="readmore">Read More <i
-                                        class="fal fa-long-arrow-right"></i></a>
-                            </div>
-                            <div class="icon">
-                                <img src="img/icon/cou-icon.png" alt="img">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 ">
-                        <div class="courses-item mb-30 hover-zoomin">
-                            <div class="thumb fix">
-                                <a href="course-details.html"><img src="img/bg/couress-img-1.jpg"
-                                        alt="contact-bg-an-01"></a>
-                            </div>
-                            <div class="courses-content">
-                                <div class="cat"><i class="fal fa-graduation-cap"></i> Sciences</div>
-                                <h3><a href="course-details.html"> Biotechnology</a></h3>
-                                <p>Seamlessly visualize quality ellectual capital without superior collaboration and
-                                    idea tically</p>
-                                <a href="course-details.html" class="readmore">Read More <i
-                                        class="fal fa-long-arrow-right"></i></a>
-                            </div>
-                            <div class="icon">
-                                <img src="img/icon/cou-icon.png" alt="img">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 ">
-                        <div class="courses-item mb-30 hover-zoomin">
-                            <div class="thumb fix">
-                                <a href="course-details.html"><img src="img/bg/couress-img-1.jpg"
-                                        alt="contact-bg-an-01"></a>
-                            </div>
-                            <div class="courses-content">
-                                <div class="cat"><i class="fal fa-graduation-cap"></i> Finance</div>
-                                <h3><a href="course-details.html"> Corporate Finance</a></h3>
-                                <p>Seamlessly visualize quality ellectual capital without superior collaboration and
-                                    idea tically</p>
-                                <a href="course-details.html" class="readmore">Read More <i
-                                        class="fal fa-long-arrow-right"></i></a>
-                            </div>
-                            <div class="icon">
-                                <img src="img/icon/cou-icon.png" alt="img">
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
                 <div class="row">
-                    <div class="col-12">
-                        <div class="pagination-wrap mt-20 text-center">
-                            <nav>
-                                <ul class="pagination">
-                                    <li class="page-item"><a href="#"><i class="fas fa-angle-double-left"></i></a></li>
-                                    <li class="page-item active"><a href="#">1</a></li>
-                                    <li class="page-item"><a href="#">2</a></li>
-                                    <li class="page-item"><a href="#">3</a></li>
-                                    <li class="page-item"><a href="#">...</a></li>
-                                    <li class="page-item"><a href="#">10</a></li>
-                                    <li class="page-item"><a href="#"><i class="fas fa-angle-double-right"></i></a></li>
-                                </ul>
-                            </nav>
+                    <div class="col-xl-3 col-md-6">
+                        <div class="single-team mb-40">
+                            <div class="team-thumb">
+                                <div class="brd">
+                                    <a href="team-single.html"><img src="img/team/team01.jpg" alt="img"></a>
+
+                                </div>
+                            </div>
+                            <div class="team-info">
+                                <h4><a href="team-single.html">Howard Holmes</a></h4>
+                                <p>Maths</p>
+
+                            </div>
                         </div>
                     </div>
-                    <div></div>
+                    <div class="col-xl-3 col-md-6">
+                        <div class="single-team mb-40">
+                            <div class="team-thumb">
+                                <div class="brd">
+                                    <a href="team-single.html"><img src="img/team/team02.jpg" alt="img"></a>
+                                </div>
+                            </div>
+                            <div class="team-info">
+                                <h4><a href="team-single.html">Ella Thompson</a></h4>
+                                <p>Science</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <div class="single-team mb-40">
+                            <div class="team-thumb">
+                                <div class="brd">
+                                    <a href="team-single.html"><img src="img/team/team03.jpg" alt="img"></a>
+                                </div>
+
+                            </div>
+                            <div class="team-info">
+                                <h4><a href="team-single.html">Vincent Cooper</a></h4>
+                                <p>English</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <div class="single-team mb-40">
+                            <div class="team-thumb">
+                                <div class="brd">
+                                    <a href="team-single.html"><img src="img/team/team04.jpg" alt="img"></a>
+                                </div>
+
+                            </div>
+                            <div class="team-info">
+                                <h4><a href="team-single.html">Danielle Bryant</a></h4>
+                                <p>History</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <div class="single-team mb-40">
+                            <div class="team-thumb">
+                                <div class="brd">
+                                    <a href="team-single.html"><img src="img/team/team04.jpg" alt="img"></a>
+                                </div>
+
+                            </div>
+                            <div class="team-info">
+                                <h4><a href="team-single.html">Danielle Bryant</a></h4>
+                                <p>History</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <div class="single-team mb-40">
+                            <div class="team-thumb">
+                                <div class="brd">
+                                    <a href="team-single.html"><img src="img/team/team04.jpg" alt="img"></a>
+                                </div>
+
+                            </div>
+                            <div class="team-info">
+                                <h4><a href="team-single.html">Danielle Bryant</a></h4>
+                                <p>History</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <div class="single-team mb-40">
+                            <div class="team-thumb">
+                                <div class="brd">
+                                    <a href="team-single.html"><img src="img/team/team04.jpg" alt="img"></a>
+                                </div>
+
+                            </div>
+                            <div class="team-info">
+                                <h4><a href="team-single.html">Danielle Bryant</a></h4>
+                                <p>History</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <div class="single-team mb-40">
+                            <div class="team-thumb">
+                                <div class="brd">
+                                    <a href="team-single.html"><img src="img/team/team04.jpg" alt="img"></a>
+                                </div>
+
+                            </div>
+                            <div class="team-info">
+                                <h4><a href="team-single.html">Danielle Bryant</a></h4>
+                                <p>History</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <div class="single-team mb-40">
+                            <div class="team-thumb">
+                                <div class="brd">
+                                    <a href="team-single.html"><img src="img/team/team04.jpg" alt="img"></a>
+                                </div>
+
+                            </div>
+                            <div class="team-info">
+                                <h4><a href="team-single.html">Danielle Bryant</a></h4>
+                                <p>History</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
-        <!-- shop-area-end -->
-        <!-- brand-area -->
-        <div class="brand-area pt-60 pb-60" style="background-color:#002472">
-            <div class="container">
-                <div class="row brand-active">
-                    <div class="col-xl-2">
-                        <div class="single-brand">
-                            <img src="img/brand/b-logo1.png" alt="img">
-                        </div>
-                    </div>
-                    <div class="col-xl-2">
-                        <div class="single-brand">
-                            <img src="img/brand/b-logo2.png" alt="img">
-                        </div>
-                    </div>
-                    <div class="col-xl-2">
-                        <div class="single-brand">
-                            <img src="img/brand/b-logo3.png" alt="img">
-                        </div>
-                    </div>
-                    <div class="col-xl-2">
-                        <div class="single-brand">
-                            <img src="img/brand/b-logo4.png" alt="img">
-                        </div>
-                    </div>
-                    <div class="col-xl-2">
-                        <div class="single-brand">
-                            <img src="img/brand/b-logo5.png" alt="img">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- brand-area-end -->
     </main>
     <!-- main-area-end -->
     <!-- footer -->
@@ -466,6 +433,7 @@
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/element-in-view.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/gallery.js"></script>
 </body>
 
 </html>
