--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </head>
 
 <body>
-    <header class="header-area header-two">
+    <header class="header-area header-three">
         <div class="header-top second-header d-none d-md-block">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 d-none d-lg-block">
                         <div class="header-social">
@@ -35,6 +35,7 @@
                                 <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
                                 <a href="#" title="Twitter"><i class="fab fa-youtube"></i></a>
                             </span>
+                            <!--  /social media icon redux -->
                         </div>
                     </div>
                     <div class="col-lg-8 col-md-8 d-none d-lg-block text-right">
@@ -71,16 +72,20 @@
             </div>
         </div>
         <div id="header-sticky" class="menu-area">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="second-menu">
                     <div class="row align-items-center">
                         <div class="col-xl-3 col-lg-3">
-                            <div class="logo">
-                                <a href="index.html"><img src="img/logo/logo.jpg" alt="logo" width="90px" /></a>
+                            <div>
+                                <a href="index.html"><img src="img/logo/logo-1.png" alt="logo" /></a>
                             </div>
+                            <!-- <div class="logo">
+                                <a href="index.html"><img src="img/logo/logo.jpg" alt="logo" width="90px" /></a>
+
+                            </div> -->
                         </div>
                         <div class="col-xl-6 col-lg-6">
-                            <div class="main-menu text-center text-xl-right">
+                            <div class="main-menu text-center">
                                 <nav id="mobile-menu">
                                     <ul>
                                         <li><a href="index.html">Home</a></li>
@@ -99,7 +104,6 @@
                                     <li class="nav-icons">
                                         <img src="img/logo/nav-icon.jpg" alt="icon" />
                                     </li>
-
                                 </ul>
                             </div>
                         </div>
@@ -117,36 +121,74 @@
     <!-- main-area -->
     <main>
         <!-- slider-area -->
-        <section id="parallax" class="slider-area slider-three fix p-relative">
-            <div class="slider-active">
-                <div class="single-slider slider-bg d-flex align-items-center"
-                    style="background: url(img/slider/slider_img03.png) no-repeat">
+        <section id="home" class="slider-area fix p-relative">
+
+            <div class="slider-active" style="background: #141b22;">
+                <div class="single-slider slider-bg"
+                    style="background-image: url(img/slider/slider_bg.png); background-size: cover;">
                     <div class="container">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="col-lg-7 col-md-9">
-                                <div class="slider-content s-slider-content pt-20 text-center">
-                                    <h5 data-animation="fadeInUp" data-delay=".4s">
-                                        Welcome To Our College
-                                    </h5>
-                                    <h2 data-animation="fadeInUp" data-delay=".4s">
-                                        Better <span>education</span> for Beautiful world.
+                        <div class="row">
+
+                            <div class="col-lg-7 col-md-7">
+                                <div class="slider-content s-slider-content mt-130">
+                                    <h5 data-animation="fadeInUp" data-delay=".4s">welcome To Qeducato</h5>
+                                    <h2 data-animation="fadeInUp" data-delay=".4s">Education is the best key success in
+                                        life
                                     </h2>
-                                    <p data-animation="fadeInUp" data-delay=".6s">
-                                        Interdum et malesuada fames ac ante ipsum primis in
-                                        faucibus. Sed vehicula, ipsum at molestie tincidunt
-                                        elementum volutpat dapibus purus cursus sed nisl tristiqu.
-                                    </p>
+                                    <p data-animation="fadeInUp" data-delay=".6s">Donec vitae libero non enim placerat
+                                        eleifend
+                                        aliquam erat volutpat. Curabitur diam ex, dapibus purus sapien, cursus sed nisl
+                                        tristique, commodo gravida lectus non.</p>
 
                                     <div class="slider-btn mt-30">
-                                        <a href="about.html" class="btn mr-15" data-animation="fadeInUp"
-                                            data-delay=".4s">Explore Mor <i class="fal fa-long-arrow-right"></i></a>
+                                        <a href="about.html" class="btn ss-btn mr-15" data-animation="fadeInLeft"
+                                            data-delay=".4s">Discover More <i class="fal fa-long-arrow-right"></i></a>
+                                        <a href="contact.html" class="btn ss-btn active" data-animation="fadeInLeft"
+                                            data-delay=".4s">Contact Us <i class="fal fa-long-arrow-right"></i></a>
                                     </div>
+
                                 </div>
                             </div>
+                            <div class="col-lg-5 col-md-5 p-relative">
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="single-slider slider-bg"
+                    style="background-image: url(img/slider/slider_bg_01.png); background-size: cover;">
+                    <div class="container">
+                        <div class="row">
+
+                            <div class="col-lg-7 col-md-7">
+                                <div class="slider-content s-slider-content mt-130">
+                                    <h5 data-animation="fadeInUp" data-delay=".4s">welcome To Qeducato</h5>
+                                    <h2 data-animation="fadeInUp" data-delay=".4s">Education is the best key success in
+                                        life
+                                    </h2>
+                                    <p data-animation="fadeInUp" data-delay=".6s">Donec vitae libero non enim placerat
+                                        eleifend
+                                        aliquam erat volutpat. Curabitur diam ex, dapibus purus sapien, cursus sed nisl
+                                        tristique, commodo gravida lectus non.</p>
+
+                                    <div class="slider-btn mt-30">
+                                        <a href="about.html" class="btn ss-btn mr-15" data-animation="fadeInLeft"
+                                            data-delay=".4s">Discover More <i class="fal fa-long-arrow-right"></i></a>
+                                        <a href="contact.html" class="btn ss-btn active" data-animation="fadeInLeft"
+                                            data-delay=".4s">Contact Us <i class="fal fa-long-arrow-right"></i></a>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="col-lg-5 col-md-5 p-relative">
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
+
+
         </section>
         <!-- slider-area-end -->
         <!-- service-area -->
@@ -269,7 +311,7 @@
         </section>
         <!-- about-area-end -->
         <!-- cta-area -->
-        <section class="cta-area cta-bg pt-30 pb-30" style="background: #ff6400">
+        <section class="cta-area cta-bg pt-30 pb-30" style="background: #ffc107">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
@@ -577,7 +619,7 @@
         <!-- event-area -->
 
         <!-- brand-area -->
-        <div class="brand-area pt-60 pb-60" style="background-color: #125875">
+        <div class="brand-area pt-60 pb-60" style="background-color: #002472">
             <div class="container">
                 <div class="row brand-active">
                     <div class="col-xl-2">
@@ -665,7 +707,7 @@
 
     <!-- footer -->
     <footer class="footer-bg footer-p pt-90" style="
-        background-color: #125875;
+        background-color: #002472;
         background-image: url(img/bg/footer-bg.png);
       ">
         <div class="footer-top pb-70">
@@ -719,7 +761,7 @@
                                         </div>
                                         <div class="text">
                                             <a href="blog-details.html">Nothing impossble to need hard work</a>
-                                            <span>7 March, 2020</span>
+                                            <span class="text-light">7 March, 2020</span>
                                         </div>
                                     </li>
 
@@ -729,7 +771,7 @@
                                         </div>
                                         <div class="text">
                                             <a href="blog-details.html">Nothing impossble to need hard work</a>
-                                            <span>7 March, 2020</span>
+                                            <span class="text-light">7 March, 2020</span>
                                         </div>
                                     </li>
                                 </ul>
