--- a/index.html
+++ b/index.html
@@ -26,19 +26,22 @@
         <div class="header-top second-header d-none d-md-block">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 col-md-4 d-none d-lg-block">
+                    <div class="col-lg-5 col-md-5 d-none d-lg-block">
+
                         <div class="header-social">
                             <span>
-                                Follow us:-
                                 <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#" title="LinkedIn"><i class="fab fa-instagram"></i></a>
                                 <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
-                                <a href="#" title="Twitter"><i class="fab fa-youtube"></i></a>
+                                <a href="#" title="Twitter"><i class="fab fa-youtube me-3"></i></a>
+                                <button class="nav-btn">E-Library</button>
+                                <button class="nav-btn">Applyjob</button>
+                                <button class="nav-btn">Telemedicine</button>
                             </span>
                             <!--  /social media icon redux -->
                         </div>
                     </div>
-                    <div class="col-lg-8 col-md-8 d-none d-lg-block text-right">
+                    <div class="col-lg-7 col-md-7 d-none d-lg-block text-right">
                         <div class="header-cta">
                             <ul>
                                 <li>
