--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                     <div class="row align-items-center">
                         <div class="col-xl-3 col-lg-3">
                             <div>
-                                <a href="index.html"><img src="img/logo/logo-1.png" alt="logo" /></a>
+                                <a href="index.html"><img src="img/logo/logo-1.png" alt="logo" height="71"
+                                        width="250" /></a>
                             </div>
                             <!-- <div class="logo">
                                 <a href="index.html"><img src="img/logo/logo.jpg" alt="logo" width="90px" /></a>
@@ -820,6 +821,59 @@
         </div>
     </footer>
     <!-- footer-end -->
+
+    <!-- floating button -->
+    <!-- Button trigger modal -->
+    <button type="button" class="float btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Enquire Now
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Enquirey Form</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="">
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <label for="firstName" class="form-label">First Name</label>
+                                <input type="text" class="form-control" id="firstName" placeholder="Jhone">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label for="lastName" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" id="lastName" placeholder="Doe">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label for="phone" class="form-label">Phone Number</label>
+                                <input type="number" class="form-control" id="phone" placeholder="8101754685">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="myemail@email.com">
+                            </div>
+                            <div class="col-12">
+                                <label for="subject" class="form-label">Subject</label>
+                                <input type="text" class="form-control" id="subject" placeholder="Admission process">
+                            </div>
+                            <div class="col-12">
+                                <label for="enquireyDetails" class="form-label">Enquirey Details</label>
+                                <textarea class="form-control" id="enquireyDetails" rows="3"></textarea>
+                            </div>
+
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- JS here -->
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
